atualizado imgs e blocos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
 
     <!-- slide -->
-    <div id="carouselExample" class="carousel slide">
+    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="img/banner.png" class="d-block w-100" alt="...">
@@ -65,38 +65,56 @@
     <div id="produtos" class="pt-5">
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <div class="card">
+                <div class="col-md-4 mt-2">
+                    <div class="card p-4">
                         <img src="img/vinho_a.jpeg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Na Suavinhos, estamos apaixonados por vinhos suaves. Acreditamos que a
-                                elegância e a sutileza desses vinhos merecem ser apreciadas por todos os amantes de
-                                vinho.
+                        <div class="card-body text-center">
+                            <h3>Saint German</h3>
+                            <p class="card-text">
+                                Saint Germain Assemblage Tinto Suave
                             </p>
+                            <h4>R$ 22,90</h4>
+                            <a class="btn btn-primary" target="_blank" href="https://github.com/AirtonBorges/">Saiba
+                                Mais</a>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card">
+                <div class="col-md-4 mt-2">
+                    <div class="card p-4">
                         <img src="img/vinho_b.jpeg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Aqui na Suavinhos, nos orgulhamos de oferecer uma ampla variedade de
-                                vinhos
-                                suaves de alta qualidade.</p>
+                        <div class="card-body text-center">
+                            <h3>Chalise</h3>
+                            <p class="card-text">Vinho Adega do Vale Mesa Suave</p>
+                            <h4>R$ 14,63</h4>
+                            <a class="btn btn-primary" target="_blank" href="https://github.com/matheus062/">Saiba
+                                Mais</a>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card">
+                <div class="col-md-4 mt-2">
+                    <div class="card p-4">
                         <img src="img/vinho_c.jpeg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Na Suavinhos, acreditamos que o conhecimento é fundamental para a
-                                apreciação de um bom vinho.</p>
+                        <div class="card-body text-center">
+                            <h3>Aurora</h3>
+                            <p class="card-text">Vinho Branco Suave Aurora Colheita Tardia</p>
+                            <h4>R$ 46,50</h4>
+                            <a class="btn btn-primary" target="_blank" href="https://github.com/matheus062/">Saiba
+                                Mais</a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 
+    <div class="card text-bg-dark mt-5">
+        <img src="img/queijo.jpg" class="card-img" alt="...">
+        <div class="card-img-overlay">
+            <h5 class="card-title">Peixoto Degustador</h5>
+            <p class="card-text">Combine quieijos especiais com vinhos suaves para atingir o máximo de explosão e
+                sabores.</p>
+            <p class="card-text"><small>Atualizado em 23 de maio de 2023</small></p>
+            <a class="btn btn-primary" target="_blank" href="https://github.com/matheus062/">Saiba Mais</a>
         </div>
     </div>
 </body>
